--- a/index.html
+++ b/index.html
@@ -16,11 +16,34 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
         rel="stylesheet">
+    <!-- Font awesome kit -->
+    <script src="https://kit.fontawesome.com/0fbd660fa4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-
+        <div class="banner">
+            <h1 class="banner-title">Explore Your Travel</h1>
+            <p class="banner-description">The most significant benefit for you from traveling is that you are restarting your life for just a small period which the traveling period and this will affect your health positively! </p>
+            <form class="search-form">
+                <input type="search" name="searchPlace" id="searchPlace" placeholder="Where go">
+                <select name="whenGo" id="whenGo">
+                        <option value="when">When</option>
+                        <option value="tomorrow">Tomorrow</option>
+                        <option value="after3days">After 3 Days</option>
+                        <option value="sevendays">After 7 Days</option>
+                </select>
+                <select name="selectType" id="selectType">
+                        <option value="searchType">Search Type </option>
+                        <option value="searchType">Normal Search</option>
+                        <option value="searchType">Medium Search</option>
+                        <option value="searchType">Hard Search</option>
+                </select>
+                <button type="submit" id="findBtn">
+                    <i class="fa-solid fa-magnifying-glass"></i> &nbsp; Find Now
+                </button>
+            </form>
+        </div>
     </header>
 </body>
 
