2 destination image added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                     <li class="tour_term">Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta
                         lacus. Lectus
                         suspendisse nullam.</li>
-                    <li class="tour_termFinal tour_term"> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at
+                    <li class="tour_termFinal tour_term"> Accumsan eget et turpis praesent lorem egestas enim elit
+                        bibendum. Risus at
                         in.</li>
                 </ul>
                 <p class="tour-foot-description">Amet consectetur. Vulputate commodo felis molestie risus
@@ -70,6 +71,36 @@
             </div>
             <div>
                 <img src="Images/Rectangle 4.png" alt="Reactangle 4" class="tourImage">
+            </div>
+        </section>
+        <section class="destination">
+            <div class="destination-content">
+                <h2 class="destination-title">Choose Your Destination</h2>
+                <p class="destination-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+                    odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="destination-place-gallary">
+                    <div class="destination-img  img1">
+                        <img src="./Images/Rectangle 5.png" alt="Maldips">
+                    </div>
+                    <div class="destination-img img2">
+                        <img src="./Images/Rectangle 8.png" alt="Indonesia">
+                    </div>
+                <!-- <div class="destination-img img3">
+                    <img src="./Images/Rectangle 6.png" alt="Srilanka">
+                </div>
+                <div class="destination-img img4">
+                    <img src="./Images/Rectangle 7.png" alt="North America">
+                </div>
+                <div class="destination-img img5">
+                    <img src="./Images/Rectangle 9.png" alt="Kashmir">
+                </div>
+                <div class="destination-img img6">
+                    <img src="./Images/Rectangle 11.png" alt="Bangladesh">
+                </div>
+                <div class="destination-img img7">
+                    <img src="./Images/Rectangle 10.png" alt="Bandharban">
+                </div> -->
             </div>
         </section>
     </main>
