Destination section completed

--- a/index.html
+++ b/index.html
@@ -80,27 +80,33 @@
                     odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
             <div class="destination-place-gallary">
-                    <div class="destination-img  img1">
-                        <img src="./Images/Rectangle 5.png" alt="Maldips">
+                <div class="destination-place-album1">
+                    <div class="destination-img">
+                        <img src="./Images/Rectangle 5.png" class="image" alt="Maldips">
                     </div>
-                    <div class="destination-img img2">
-                        <img src="./Images/Rectangle 8.png" alt="Indonesia">
+                    <div class="destination-img"> 
+                        <img src="./Images/Rectangle 8.png" class="image" alt="Indonesia">
                     </div>
-                <!-- <div class="destination-img img3">
-                    <img src="./Images/Rectangle 6.png" alt="Srilanka">
                 </div>
-                <div class="destination-img img4">
-                    <img src="./Images/Rectangle 7.png" alt="North America">
+                <div class="destination-place-album2">
+                    <div class="destination-img">
+                        <img src="./Images/Rectangle 6.png" class="image" alt="Srilanka">
+                    </div>
+                    <div class="destination-img">
+                        <img src="./Images/Rectangle 7.png" class="image" alt="North America">
+                    </div>
+                    <div class="destination-img img5">
+                        <img src="./Images/Rectangle 9.png" class="image" alt="Kashmir">
+                    </div>
                 </div>
-                <div class="destination-img img5">
-                    <img src="./Images/Rectangle 9.png" alt="Kashmir">
+                <div class="destination-place-album3">
+                    <div class="destination-img img6">
+                        <img src="./Images/Rectangle 11.png" class="image" alt="Bangladesh">
+                    </div>
+                    <div class="destination-img img7">
+                        <img src="./Images/Rectangle 10.png" class="image" alt="Bandharban">
+                    </div>
                 </div>
-                <div class="destination-img img6">
-                    <img src="./Images/Rectangle 11.png" alt="Bangladesh">
-                </div>
-                <div class="destination-img img7">
-                    <img src="./Images/Rectangle 10.png" alt="Bandharban">
-                </div> -->
             </div>
         </section>
     </main>
