Some new resources added

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="destination-img">
                         <img src="./Images/Rectangle 5.png" class="image" alt="Maldips">
                     </div>
-                    <div class="destination-img"> 
+                    <div class="destination-img">
                         <img src="./Images/Rectangle 8.png" class="image" alt="Indonesia">
                     </div>
                 </div>
@@ -107,6 +107,21 @@
                         <img src="./Images/Rectangle 10.png" class="image" alt="Bandharban">
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="why-chose-us">
+            <div class="choose-us-content">
+                <h2 class="choose-title">Why Choose Us</h2>
+                <p class="choose-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+                    sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="service-container-1">
+                <div class="service">
+                    <img src="" alt="" class="service_img">
+                    <h4 class="service_title"></h4>
+                    <p class="service_description"></p>
+                </div>
+                <div class="service"></div>
             </div>
         </section>
     </main>
