--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Travel Website</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
@@ -117,11 +117,26 @@
             </div>
             <div class="service-container-1">
                 <div class="service">
-                    <img src="" alt="" class="service_img">
-                    <h4 class="service_title"></h4>
-                    <p class="service_description"></p>
+                    <img src="./Images/icons/hotel 1.svg" alt="hotel" class="service_img">
+                    <h4 class="service_title">Handpicked Hotels</h4>
+                    <p class="service_description">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque
+                        aliquet. </p>
                 </div>
-                <div class="service"></div>
+                <div class="uniq_service">
+                    <img src="./Images/icons/map 1.svg" alt="hotel" class="service_img">
+                    <h4 class="service_title">World Class Service</h4>
+                    <p class="service_description">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque
+                        aliquet. </p>
+                </div>
+            </div>
+            <div class="extra-service">
+                <div class="service-another">
+                    <img src="./Images/icons/price-tag 1.svg" alt="hotel" class="service_img">
+                    <h4 class="service_title">Best Price Guarantee</h4>
+                    <p class="service_description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
             </div>
         </section>
     </main>
