Some dummy Text changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Website</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
@@ -135,11 +135,54 @@
                 <div class="service-another">
                     <img src="./Images/icons/price-tag 1.svg" alt="hotel" class="service_img">
                     <h4 class="service_title">Best Price Guarantee</h4>
-                    <p class="service_description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p class="service_description">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla
+                        amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque
+                        aliquet. </p>
+                </div>
+            </div>
+        </section>
+        <section id="newsLetterSection">
+            <form action="" class="newsLetterForm">
+                <h2 class="newsLetterTitle">Newsletter</h2>
+                <p class="newsLetterShortDescription">Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr>
+                <label for="userName">
+                    <input type="text" name="userName" id="userName" placeholder="Enter Your Name">
+                </label>
+                <label for="userEmail">
+                    <input type="email" name="userEmail" id="userEmail" placeholder="Enter Your Email">
+                </label>
+                <label for="submitForm">
+                    <input type="submit" value="Subscribe">
+                </label>
+            </form>
+            <div class="newsletterimage">
+                <img src="./Images/Rectangle 8 (1).png" alt="newLetterimage" class="newsImage">
+                <div class="offering-tag">
+                    <p class="sitename">Peacfull Travel.com</p>
+                    <h3 class="offerinfo">Save up to 70%</h3>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-logo">
+            <div class="logo-area">
+                <img src="./Images/Group 40071 (2).png" alt="Footer logo">
+                <p class="footer-logo-text">
+                    Peacfull <span class="uniq_color">Travel</span>
+                </p>
+            </div>
+            <p class="footer-description">
+                Start your adventure today with Peacfull Travel. Your dream destination is just a click away.
+            </p>
+            <div class="social-icons">
+                <img src="./Images/icons/Social.svg" alt="Social">
+            </div>
+            <hr class="footerLine">
+        </div>
+        <small class="copyright-text">2017, All Rights Reserved.</small>
+    </footer>
 </body>
 
 </html>
