Social icon replaced by fontawesome icons

--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@
                 Start your adventure today with Peacfull Travel. Your dream destination is just a click away.
             </p>
             <div class="social-icons">
-                <img src="./Images/icons/Social.svg" alt="Social">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
             </div>
             <hr class="footerLine">
         </div>
