--- a/index.html
+++ b/index.html
@@ -81,28 +81,35 @@
                 <div class="destination-place-album1">
                     <div class="destination-img">
                         <img src="./Images/Rectangle 5.png" class="image" alt="Maldips">
+                        <div class="centered">Maldips</div>
                     </div>
                     <div class="destination-img">
                         <img src="./Images/Rectangle 8.png" class="image" alt="Indonesia">
+                        <div class="centered">Indonesia</div>
                     </div>
                 </div>
                 <div class="destination-place-album2">
                     <div class="destination-img">
                         <img src="./Images/Rectangle 6.png" class="image" alt="Srilanka">
+                        <div class="centered">Srilanka</div>
                     </div>
                     <div class="destination-img">
                         <img src="./Images/Rectangle 7.png" class="image" alt="North America">
+                        <div class="centered">North America</div>
                     </div>
                     <div class="destination-img img5">
                         <img src="./Images/Rectangle 9.png" class="image" alt="Kashmir">
+                        <div class="centered">Kashmir</div>
                     </div>
                 </div>
                 <div class="destination-place-album3">
                     <div class="destination-img img6">
                         <img src="./Images/Rectangle 11.png" class="image" alt="Bangladesh">
+                        <div class="centered">Bangladesh</div>
                     </div>
                     <div class="destination-img img7">
                         <img src="./Images/Rectangle 10.png" class="image" alt="Bandharban">
+                        <div class="centered">Bandarban</div>
                     </div>
                 </div>
             </div>
