One Uniq section adde called tour blog

--- a/index.html
+++ b/index.html
@@ -114,6 +114,32 @@
                 </div>
             </div>
         </section>
+        <section class="tour-guides">
+            <h2 class="destination-title">Tour Guide Related Blog</h2>
+            <div class="tourGuideContainer">
+            <div class="tour_guide">
+                <img src="./Images/guide-images/place1.png" alt="Tour Place">
+                <div class="tour_guide_content">
+                  <h4><b>Visit The Forest</b></h4>
+                  <p>A forest, a tapestry of life, breathes with the rhythmic pulse of nature. Towering trees, their canopies interwoven like a vast green cathedral, create a sanctuary for countless organisms. </p>
+                </div>
+            </div>
+            <div class="tour_guide">
+                <img src="./Images/guide-images/place1.png" alt="Tour Place">
+                <div class="tour_guide_content">
+                  <h4><b>Visit The Forest</b></h4>
+                  <p>A forest, a tapestry of life, breathes with the rhythmic pulse of nature. Towering trees, their canopies interwoven like a vast green cathedral, create a sanctuary for countless organisms. </p>
+                </div>
+            </div>
+            <div class="tour_guide">
+                <img src="./Images/guide-images/place1.png" alt="Tour Place">
+                <div class="tour_guide_content">
+                  <h4><b>Visit The Forest</b></h4>
+                  <p>A forest, a tapestry of life, breathes with the rhythmic pulse of nature. Towering trees, their canopies interwoven like a vast green cathedral, create a sanctuary for countless organisms. </p>
+                </div>
+            </div>
+        </div>
+        </section>
         <section class="why-chose-us">
             <div class="choose-us-content">
                 <h2 class="choose-title">Why Choose Us</h2>
