Navbar created with hamburger menu

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 
 <body>
     <header>
+        <nav class="navbar">
+            <a href="#">Peaceful <span class="uniq_color nav_brand">Travel</span></a>
+            <label for="toggler">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <input type="checkbox" id="toggler" name="">
+            <div class="menu">
+                <ul class="list">
+                    <li><a href="#" class="uniq_navItem">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Login</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="banner">
             <h1 class="banner-title">Explore Your Travel</h1>
             <p class="banner-description">The most significant benefit for you from traveling is that you are restarting
@@ -63,7 +79,8 @@
                         bibendum. Risus at
                         in.</li>
                 </ul>
-                <p class="tour-foot-description">Indulge in our popular tour experiences, crafted for unforgettable moments. From cultural immersions to thrilling adventures, elevate your travels with us.
+                <p class="tour-foot-description">Indulge in our popular tour experiences, crafted for unforgettable
+                    moments. From cultural immersions to thrilling adventures, elevate your travels with us.
                 </p>
                 <button class="btn-primary">Read More</button>
             </div>
@@ -117,28 +134,34 @@
         <section class="tour-guides">
             <h2 class="destination-title">Tour Guide Related Blog</h2>
             <div class="tourGuideContainer">
-            <div class="tour_guide">
-                <img src="./Images/guide-images/place1.png" alt="Tour Place">
-                <div class="tour_guide_content">
-                  <h4><b>Visit The Forest</b></h4>
-                  <p>A forest, a tapestry of life, breathes with the rhythmic pulse of nature. Towering trees, their canopies interwoven like a vast green cathedral, create a sanctuary for countless organisms. </p>
+                <div class="tour_guide">
+                    <img src="./Images/guide-images/place1.png" alt="Tour Place">
+                    <div class="tour_guide_content">
+                        <h4><b>Visit The Forest</b></h4>
+                        <p>A forest, a tapestry of life, breathes with the rhythmic pulse of nature. Towering trees,
+                            their canopies interwoven like a vast green cathedral, create a sanctuary for countless
+                            organisms. </p>
+                    </div>
+                </div>
+                <div class="tour_guide">
+                    <img src="./Images/guide-images/place1.png" alt="Tour Place">
+                    <div class="tour_guide_content">
+                        <h4><b>Visit The Forest</b></h4>
+                        <p>A forest, a tapestry of life, breathes with the rhythmic pulse of nature. Towering trees,
+                            their canopies interwoven like a vast green cathedral, create a sanctuary for countless
+                            organisms. </p>
+                    </div>
+                </div>
+                <div class="tour_guide">
+                    <img src="./Images/guide-images/place1.png" alt="Tour Place">
+                    <div class="tour_guide_content">
+                        <h4><b>Visit The Forest</b></h4>
+                        <p>A forest, a tapestry of life, breathes with the rhythmic pulse of nature. Towering trees,
+                            their canopies interwoven like a vast green cathedral, create a sanctuary for countless
+                            organisms. </p>
+                    </div>
                 </div>
             </div>
-            <div class="tour_guide">
-                <img src="./Images/guide-images/place1.png" alt="Tour Place">
-                <div class="tour_guide_content">
-                  <h4><b>Visit The Forest</b></h4>
-                  <p>A forest, a tapestry of life, breathes with the rhythmic pulse of nature. Towering trees, their canopies interwoven like a vast green cathedral, create a sanctuary for countless organisms. </p>
-                </div>
-            </div>
-            <div class="tour_guide">
-                <img src="./Images/guide-images/place1.png" alt="Tour Place">
-                <div class="tour_guide_content">
-                  <h4><b>Visit The Forest</b></h4>
-                  <p>A forest, a tapestry of life, breathes with the rhythmic pulse of nature. Towering trees, their canopies interwoven like a vast green cathedral, create a sanctuary for countless organisms. </p>
-                </div>
-            </div>
-        </div>
         </section>
         <section class="why-chose-us">
             <div class="choose-us-content">
@@ -200,11 +223,11 @@
             <div class="logo-area">
                 <img src="./Images/Group 40071 (2).png" alt="Footer logo">
                 <p class="footer-logo-text">
-                    Peacfull <span class="uniq_color">Travel</span>
+                    Peaceful<span class="uniq_color">Travel</span>
                 </p>
             </div>
             <p class="footer-description">
-                Start your adventure today with Peacfull Travel. Your dream destination is just a click away.
+                Start your adventure today withPeacefulTravel. Your dream destination is just a click away.
             </p>
             <div class="social-icons">
                 <i class="fa-brands fa-twitter"></i>
