--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Website</title>
+    <title>Peaceful Travel Home</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
     <!-- CSS Files -->
